--- a/ADnD_1E/1ESheet.css
+++ b/ADnD_1E/1ESheet.css
@@ -1,3 +1,12 @@
+.sheet-npc {
+  display: none;
+}
+
+.sheet-pc {
+  display: block;
+}
+
+
 /* announcements */
 .sheet-announcements-title {
   vertical-align: text-bottom;
